fixed multiple intervals

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -28,7 +28,7 @@
     <body>
         <div class="app">
         	<div id="startpage">
-				<a id="start" onclick="app.switchPage('map');app.loadMap()">Speel spel</a>
+				<a id="start" onclick="app.switchPage('map')">Speel spel</a>
             	<div id="deviceready" class="blink">
 	                <p class="event listening"><a onclick="app.onMenuButton()">Controleren status...</a></p>
                 	<p class="event received"><a onclick="app.onMenuButton()">Apparaat is gereed</a></p>
